--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Comedoria</string>
+    <string name="preference_file_key">com.example.comedoria.PREFERENCE_FILE_KEY</string>
 
     <string name="title_activity_inicial">InicialActivity</string>
     <string name="title_home">Home</string>
