--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Comedoria</string>
-    <string name="preference_file_key">com.example.comedoria.PREFERENCE_FILE_KEY</string>
 
     <string name="title_activity_inicial">InicialActivity</string>
     <string name="title_home">Home</string>
@@ -8,11 +7,19 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_main2">MainActivity2</string>
 
+    <string name="preference_file_key">com.example.comedoria.PREFERENCE_FILE_KEY</string>
+
     <string-array name="filtro_ordenar">
         <item>Ordenar</item>
         <item>Menor preço</item>
         <item>Maior preço</item>
         <item>A-Z</item>
         <item>Z-A</item>
+    </string-array>
+
+    <string-array name="filtro_categoria">
+        <item>Marmita</item>
+        <item>Bebida</item>
+        <item>Salgados</item>
     </string-array>
 </resources>
