--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Comedoria</string>
+    <string name="preference_file_key">com.example.comedoria.PREFERENCE_FILE_KEY</string>
 
     <string name="title_activity_inicial">InicialActivity</string>
     <string name="title_home">Home</string>
@@ -7,7 +8,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_main2">MainActivity2</string>
 
-    <string name="preference_file_key">com.example.comedoria.PREFERENCE_FILE_KEY</string>
+
 
     <string-array name="filtro_ordenar">
         <item>Ordenar</item>
@@ -17,7 +18,7 @@
         <item>Z-A</item>
     </string-array>
 
-    <string-array name="filtro_categoria">
+    <string-array name="filtro_categoria_add_produto">
         <item>Marmita</item>
         <item>Bebida</item>
         <item>Salgados</item>
